# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.3.6 (git revision xxx)
====================================================================

Small features:
  * New STARPU_BACKOFF_MIN and STARPU_BACKOFF_MAX environment variables to the
    exponential backoff limits of the number of cycles to pause while drivers
    are spinning.
  * Add STARPU_DISPLAY_BINDINGS environment variable and
    starpu_display_bindings() function to display all bindings on the machine by
    calling hwloc-ps

StarPU 1.3.5 (git revision 5f7458799f548026fab357b18541bb462dde2b53)
====================================================================

Small features:
  * New environment variable STARPU_FXT_SUFFIX to set the filename in
    which to save the fxt trace
  * New option -d for starpu_fxt_tool to specify in which directory to
    generate files

Small changes:
  * Move MPI cache functions into the public API
  * Add STARPU_MPI_NOBIND environment variable.

StarPU 1.3.4 (git revision c37a5d024cd997596da41f765557c58099baf896)
====================================================================

Small features:
  * New environment variables STARPU_BUS_STATS_FILE and
    STARPU_WORKER_STATS_FILE to specify files in which to display
    statistics about data transfers and workers.
  * Add starpu_bcsr_filter_vertical_block filtering function.
  * Add starpu_interface_copy2d, 3d, and 4d to easily request data copies from
    data interfaces.
  * Move optimized cuda 2d copy from interfaces to new
    starpu_cuda_copy2d_async_sync and starpu_cuda_copy3d_async_sync, and use
    them from starpu_interface_copy2d and 3d.